tests/ui/coherence/coherence-impls-send.stderr
error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `(MyType, MyType)`
  --> $DIR/coherence-impls-send.rs:16:1
   |
LL | unsafe impl Send for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `&'static NotSync`
  --> $DIR/coherence-impls-send.rs:19:1
   |
LL | unsafe impl Send for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `[MyType]`
  --> $DIR/coherence-impls-send.rs:22:1
   |
LL | unsafe impl Send for [MyType] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error[E0321]: cross-crate traits with a default impl, like `Send`, can only be implemented for a struct/enum type, not `&'static [NotSync]`
  --> $DIR/coherence-impls-send.rs:25:1
   |
LL | unsafe impl Send for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't implement cross-crate trait with a default impl for non-struct/enum type

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0321`.
